@@ -46,7 +46,7 @@
     (method-combination-documentation (get-method-combination x 'documentation)))
   (:method ((x standard-method) (doc-type (eql 't)))
     (declare (ignore doc-type))
-    (getf (gethash x sys::*documentation*) 'standard-method))
+    (std-method-documentation x))
   (:method ((x package) (doc-type (eql 't)))
     (declare (ignore doc-type))
     (sys::package-documentation x))
@@ -129,7 +129,7 @@
           new-value))
   (:method (new-value (x standard-method) (doc-type (eql 't)))
     (declare (ignore doc-type))
-    (sys::%set-documentation x 'standard-method new-value))
+    (setf (std-method-documentation x) new-value))
   (:method (new-value (x package) (doc-type (eql 't)))
     (declare (ignore doc-type))
     (setf (sys::package-documentation x) new-value))
